--- a/(2019) Elma/07. After the Rain.md
+++ b/(2019) Elma/07. After the Rain.md
@@ -4,14 +4,14 @@ await dv.view('_script');
 雨晴るる | Ame Haruru | Sau cơn mưa
 #### Lyrics
 
-| Japanese                                                                                                                    | Romanji                                                                                                                                                                                                                            | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)                                                                                                                                                                                                                                                        | [pikapika](https://pikapika-translate.blogspot.com/2021/05/elma.html)                                                                                                                                                                                                                                                |
-| --------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| やっと雨が降ったんだ<br><br>この青をずっと思っていたんだ<br><br>心臓の音が澄んでいた<br><br>言葉以外何もいらない空だ                                                      | Yatto ame ga futta n da<br><br>Kono ao o zutto omotteita n da<br><br>Shinzō no oto ga sundeita<br><br>Kotoba igai nan ni mo iranai sora da                                                                                         | Finally, the rain fell<br><br>I’ve been thinking about this blue for a while now<br><br>The sound of my heart was clear <br><br>It’s a sky where I didn’t need anything other than words                                                                                                                                                          | Cuối cùng trời cũng mưa<br><br>Tớ đã mãi thương nhớ màu xanh này<br><br>Trái tim tớ đã lặng tiếng<br><br>Một bầu trời không còn cần gì nữa ngoài ngôn từ                                                                                                                                                             |
-| あの日まで僕は眠っていたんだ<br><br>言い訳ばかりで足が出なかった<br><br>想像よりずっと君がいた街の青さを   ずっと                                                          | Ano hi made boku wa nemutteita n da<br><br>Iiwake bakari de ashi ga denakatta<br><br>Sōzō yori zutto kimi ga ita machi no aosa o zutto                                                                                             | I’ve been asleep up until that day<br><br>Unwilling to take a step, making excuses<br><br>I’ll take the blue of the town you lived in for a while that’s bluer than I imagined and                                                                                                                                                                | Giấc ngủ đã đưa tớ về ngày hôm đó<br><br>Có quá nhiều lí lẽ, và tớ cứ vương vấn<br><br>Không thể ra khỏi bầu trời xanh nơi thành phố cậu ở                                                                                                                                                                           |
-| 歌え    人生は君だ<br><br>ずっと君だ  全部君だ  藍の色だ<br><br>言葉になろうと残った思い出だけが遠い群青を染めた<br><br>もっと書きたい   ずっと冷めない愛の歌を<br><br>君のいない夏がまた来る        | Utae jinsei wa kimi da<br><br>Zutto kimi da zenbu kimi da ai no iro da<br><br>Kotoba ni narou to nokotta omoide dake ga tōi gunjō o someta<br><br>Motto kakitai zutto samenai ai no uta o<br><br>Kimi no inai natsu ga mata kuru   | Sing it out for a while. This life is you. <br><br>It’s always been you, everything is you, a deep indigo blue<br><br>Even if you turn into words, these memories you left behind alone was dyed a far aquamarine<br><br>I wanna write about it more, this love song that won’t grow cold for a while<br><br>Another summer without you will come | Hãy hát lên đi! Cuộc đời này chính là cậu<br><br>Luôn luôn là cậu, tất cả đều là cậu, phủ một màu chàm<br><br>Chỉ có những kỷ niệm còn lại hóa thành ngôn từ là nhuộm màu xanh biếc<br><br>Tớ muốn viết nhiều hơn, viết những bản tình ca sẽ không bao giờ nguội lạnh<br><br>Lại một mùa hè nữa không có cậu sắp đến |
-| やっと雨が上がったんだ<br><br>この街をきっと君が描いたんだ<br><br>心臓の音が澄んでいた<br><br>あの日からずっと君が待っている<br><br>何も言わない僕は笑っている、誤魔化すように                     | Yatto ame ga agatta n da<br><br>Kono machi o kitto kimi ga kaita n da<br><br>Shinzō no oto ga sundeita<br><br>Ano hi kara zutto kimi ga matteiru<br><br>Nani mo iwanai boku ga waratteiru, gomakasu yōni                           | Finally, the rain stopped<br><br>You surely painted this down once <br><br>Ever since that day that cleared up the sound of my heart <br><br>You’ve been waiting for me<br><br>Unable to form words I laugh, and so you’re none the wiser                                                                                                         | Cuối cùng cũng tạnh mưa<br><br>Chắc hẳn cậu đã viết về thành phố này<br><br>Con tim tớ đã lặng thinh<br><br>Từ ngày đó nó vẫn luôn đợi cậu<br><br>Tớ không nói gì nữa, chỉ biết cười, như thể tự lừa dối                                                                                                             |
-| 消えろ   全部消えろ<br><br>声も言葉も愛の歌も<br><br>この目を覆った淡い群青の中で 白いカーテンが揺れる<br><br>もっと触れたい ずっと触れたい 愛の歌を<br><br>君のいない夏の青さも                 | Kiero zenbu kiero<br><br>Koe mo kotoba mo ai no uta mo<br><br>Kono me o ootta awai gunjō no naka de shiroi ka-ten ga yureru<br><br>Motto furetai zutto furetai ai no uta o<br><br>Kimi no inai natsu no aosa o                     | Please erase it, please erase it all<br><br>Your voice, words, and love songs <br><br>A curtain sways in the pale aquamarine colour that covered my eyes <br><br>I want to feel this love song more, I want to feel it more<br><br>I want to feel the blue of the summer without you as well                                                      | Biến đi! Tất cả biến hết đi!<br><br>Cả tiếng nói, cả từ ngữ, cả tình ca<br><br>Rèm cửa màu trắng đung đưa trong màu xanh nhàn nhạt che phủ đôi mắt này<br><br>Tớ muốn chạm nhiều hơn, chạm vào bản tình ca<br><br>Chạm vào mùa hè không có câu                                                                       |
-| 白いカーテンが揺れた<br><br>そっと揺れた 僕に揺れた 愛に触れた<br><br>言葉になろうと残っていた君の詩は<br><br>あの憧憬は消えない きっと消せない<br><br>ずっと褪せない無謬の色だ                   | Shiroi ka-ten ga yureta<br><br>Sotto yureta boku ni yureta ai ni fureta<br><br>Kotoba ni narou to nokotteita kimi no shi wa<br><br>Ano dōkei wa kienai kitto kesenai<br><br>Zutto asenai mubyuu no iro da                          | A white curtain swayed<br><br>It softly swayed, it swayed to me, and touched upon our my love<br><br>Even if you turn into words, Those songs you left behind and<br><br>That longing won’t disappear, they haven’t been able to disappear <br><br>That unmistakable colour hasn’t been able to fade                                              | Tấm rèm cửa màu trắng đung đưa<br><br>Nhẹ nhàng đung đưa, đung đưa trước mắt tớ, chạm vào tình cảm của tớ<br><br>Bài hát của cậu để lại sẽ trở thành ngôn từ<br><br>Và khao khát đó sẽ không biến mất, chắc chắn không thể biến mất<br><br>Một sắc màu không thể nhầm lẫn, mãi không phai màu                        |
-| 歌え    人生は君だ<br><br>全部君だ ずっと消えない愛の色だ<br><br>この目を覆った淡い群青の色だ<br><br>思い出すように揺れた<br><br>もっと書きたい   ずっと冷めない愛の歌を<br><br>君のいない夏がまた来る | Utae jinsei wa kimi da<br><br>Zenbu kun da zutto kienai ai no iro da<br><br>Kono me o ootta awai gunjō no iro da<br><br>Omoidasu yōni yureta<br><br>Motto kakitai zutto samenai ai no uta o<br><br>Kimi no inai natsu ga mata kuru | So sing it out, this life is all you<br><br>It’s all you, the colour of love that hasn’t been able to disappear<br><br>It’s the pale aquamarine colour that covered my eyes<br><br>It swayed as if it remembers<br><br>I want to write of it more, this love song that won’t fade out<br><br>Another summer without you will come around          | Hãy hát lên đi! Cuộc đời này là cậu!<br><br>Tất cả đều là cậu, là màu tình yêu không biến mất<br><br>Là màu xanh nhàn nhạt che phủ đôi mắt này<br><br>Chúng rung động để tớ nhớ lại<br><br>Tớ muốn viết nhiều hơn, viết bản tình ca mãi không nguội lạnh<br><br>Mùa hè không có cậu lại sắp đến rồi                  |
+| Japanese                                                                                                                    | Romanji                                                                                                                                                                                                                             | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)                                                                                                                                                                                                                                                        | [pikapika](https://pikapika-translate.blogspot.com/2021/05/elma.html)                                                                                                                                                                                                                                                |
+| --------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| やっと雨が降ったんだ<br><br>この青をずっと思っていたんだ<br><br>心臓の音が澄んでいた<br><br>言葉以外何もいらない空だ                                                      | Yatto ame ga futta n da<br><br>Kono ao o zutto omotteita n da<br><br>Shinzō no oto ga sundeita<br><br>Kotoba igai nan ni mo iranai sora da                                                                                          | Finally, the rain fell<br><br>I’ve been thinking about this blue for a while now<br><br>The sound of my heart was clear <br><br>It’s a sky where I didn’t need anything other than words                                                                                                                                                          | Cuối cùng trời cũng mưa<br><br>Tớ đã mãi thương nhớ màu xanh này<br><br>Trái tim tớ đã lặng tiếng<br><br>Một bầu trời không còn cần gì nữa ngoài ngôn từ                                                                                                                                                             |
+| あの日まで僕は眠っていたんだ<br><br>言い訳ばかりで足が出なかった<br><br>想像よりずっと君がいた街の青さを   ずっと                                                          | Ano hi made boku wa nemutteita n da<br><br>Iiwake bakari de ashi ga denakatta<br><br>Sōzō yori zutto kimi ga ita machi no aosa o zutto                                                                                              | I’ve been asleep up until that day<br><br>Unwilling to take a step, making excuses<br><br>I’ll take the blue of the town you lived in for a while that’s bluer than I imagined and                                                                                                                                                                | Giấc ngủ đã đưa tớ về ngày hôm đó<br><br>Có quá nhiều lí lẽ, và tớ cứ vương vấn<br><br>Không thể ra khỏi bầu trời xanh nơi thành phố cậu ở                                                                                                                                                                           |
+| 歌え    人生は君だ<br><br>ずっと君だ  全部君だ  藍の色だ<br><br>言葉になろうと残った思い出だけが遠い群青を染めた<br><br>もっと書きたい   ずっと冷めない愛の歌を<br><br>君のいない夏がまた来る        | Utae jinsei wa kimi da<br><br>Zutto kimi da zenbu kimi da ai no iro da<br><br>Kotoba ni narou to nokotta omoide dake ga tōi gunjō o someta<br><br>Motto kakitai zutto samenai ai no uta o<br><br>Kimi no inai natsu ga mata kuru    | Sing it out for a while. This life is you. <br><br>It’s always been you, everything is you, a deep indigo blue<br><br>Even if you turn into words, these memories you left behind alone was dyed a far aquamarine<br><br>I wanna write about it more, this love song that won’t grow cold for a while<br><br>Another summer without you will come | Hãy hát lên đi! Cuộc đời này chính là cậu<br><br>Luôn luôn là cậu, tất cả đều là cậu, phủ một màu chàm<br><br>Chỉ có những kỷ niệm còn lại hóa thành ngôn từ là nhuộm màu xanh biếc<br><br>Tớ muốn viết nhiều hơn, viết những bản tình ca sẽ không bao giờ nguội lạnh<br><br>Lại một mùa hè nữa không có cậu sắp đến |
+| やっと雨が上がったんだ<br><br>この街をきっと君が描いたんだ<br><br>心臓の音が澄んでいた<br><br>あの日からずっと君が待っている<br><br>何も言わない僕は笑っている、誤魔化すように                     | Yatto ame ga agatta n da<br><br>Kono machi o kitto kimi ga kaita n da<br><br>Shinzō no oto ga sundeita<br><br>Ano hi kara zutto kimi ga matteiru<br><br>Nani mo iwanai boku ga waratteiru, gomakasu yōni                            | Finally, the rain stopped<br><br>You surely painted this down once <br><br>Ever since that day that cleared up the sound of my heart <br><br>You’ve been waiting for me<br><br>Unable to form words I laugh, and so you’re none the wiser                                                                                                         | Cuối cùng cũng tạnh mưa<br><br>Chắc hẳn cậu đã viết về thành phố này<br><br>Con tim tớ đã lặng thinh<br><br>Từ ngày đó nó vẫn luôn đợi cậu<br><br>Tớ không nói gì nữa, chỉ biết cười, như thể tự lừa dối                                                                                                             |
+| 消えろ   全部消えろ<br><br>声も言葉も愛の歌も<br><br>この目を覆った淡い群青の中で 白いカーテンが揺れる<br><br>もっと触れたい ずっと触れたい 愛の歌を<br><br>君のいない夏の青さも                 | Kiero zenbu kiero<br><br>Koe mo kotoba mo ai no uta mo<br><br>Kono me o ootta awai gunjō no naka de shiroi ka-ten ga yureru<br><br>Motto furetai zutto furetai ai no uta o<br><br>Kimi no inai natsu no aosa o                      | Please erase it, please erase it all<br><br>Your voice, words, and love songs <br><br>A curtain sways in the pale aquamarine colour that covered my eyes <br><br>I want to feel this love song more, I want to feel it more<br><br>I want to feel the blue of the summer without you as well                                                      | Biến đi! Tất cả biến hết đi!<br><br>Cả tiếng nói, cả từ ngữ, cả tình ca<br><br>Rèm cửa màu trắng đung đưa trong màu xanh nhàn nhạt che phủ đôi mắt này<br><br>Tớ muốn chạm nhiều hơn, chạm vào bản tình ca<br><br>Chạm vào mùa hè không có câu                                                                       |
+| 白いカーテンが揺れた<br><br>そっと揺れた 僕に揺れた 愛に触れた<br><br>言葉になろうと残っていた君の詩は<br><br>あの憧憬は消えない きっと消せない<br><br>ずっと褪せない無謬の色だ                   | Shiroi ka-ten ga yureta<br><br>Sotto yureta boku ni yureta ai ni fureta<br><br>Kotoba ni narou to nokotteita kimi no shi wa<br><br>Ano dōkei wa kienai kitto kesenai<br><br>Zutto asenai mubyuu no iro da                           | A white curtain swayed<br><br>It softly swayed, it swayed to me, and touched upon our my love<br><br>Even if you turn into words, Those songs you left behind and<br><br>That longing won’t disappear, they haven’t been able to disappear <br><br>That unmistakable colour hasn’t been able to fade                                              | Tấm rèm cửa màu trắng đung đưa<br><br>Nhẹ nhàng đung đưa, đung đưa trước mắt tớ, chạm vào tình cảm của tớ<br><br>Bài hát của cậu để lại sẽ trở thành ngôn từ<br><br>Và khao khát đó sẽ không biến mất, chắc chắn không thể biến mất<br><br>Một sắc màu không thể nhầm lẫn, mãi không phai màu                        |
+| 歌え    人生は君だ<br><br>全部君だ ずっと消えない愛の色だ<br><br>この目を覆った淡い群青の色だ<br><br>思い出すように揺れた<br><br>もっと書きたい   ずっと冷めない愛の歌を<br><br>君のいない夏がまた来る | Utae jinsei wa kimi da<br><br>Zenbu kimi da zutto kienai ai no iro da<br><br>Kono me o ootta awai gunjō no iro da<br><br>Omoidasu yōni yureta<br><br>Motto kakitai zutto samenai ai no uta o<br><br>Kimi no inai natsu ga mata kuru | So sing it out, this life is all you<br><br>It’s all you, the colour of love that hasn’t been able to disappear<br><br>It’s the pale aquamarine colour that covered my eyes<br><br>It swayed as if it remembers<br><br>I want to write of it more, this love song that won’t fade out<br><br>Another summer without you will come around          | Hãy hát lên đi! Cuộc đời này là cậu!<br><br>Tất cả đều là cậu, là màu tình yêu không biến mất<br><br>Là màu xanh nhàn nhạt che phủ đôi mắt này<br><br>Chúng rung động để tớ nhớ lại<br><br>Tớ muốn viết nhiều hơn, viết bản tình ca mãi không nguội lạnh<br><br>Mùa hè không có cậu lại sắp đến rồi                  |
 ##### Notes
 >
