--- a/(2019) That's Why I Gave Up On Music/08. In May, From the Window with Emerald Green.md
+++ b/(2019) That's Why I Gave Up On Music/08. In May, From the Window with Emerald Green.md
@@ -7,7 +7,7 @@ await dv.view('_script');
 | Japanese                                                                | Romanji                                                                                                                                              | [Night Deer Translations, Loafer](https://docs.google.com/document/d/1AYYdLls9-Q9GX0WNGIxoXgt_6Ne4jr6-bvVPd43UsGg/edit)                                                                                    | [pikapika](https://pikapika-translate.blogspot.com/p/yorushika-moonlight.html)                                                                                                                                                      |
 | ----------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | 夏が終わることもこの胸は<br><br>気のせいだって思っていた                                        | natsu ga owaru koto mo kono mune wa<br><br>ki no sei datte omotteita                                                                                 | In my chest it felt like even the summer ending<br><br>Was just my imagination                                                                                                                             | Mùa hè sắp kết thúc, tớ lại nghĩ là do trái tim tớ tưởng tượng ra thôi.                                                                                                                                                             |
-| 空いた教室　風揺れるカーテン<br><br>君と空を見上げたあの夏が<br><br>いつまでだって頭上にいた                  | aita kyōshitsu 　 kaze yureru kāten<br><br>kun to sora o miageta ano natsu ga<br><br>itsu made datte zujō ni ita                                      | In an empty classroom, the curtain was swaying in the wind<br><br>There, I was watching the sky together with you<br><br>That summer will never cease to be on my mind                                     | Lớp học trống không, tấm rèm cửa đung đưa trong gió<br><br>Mùa hè mà tớ cùng cậu ngắm nhìn bầu trời, chưa bao giờ biến mất khỏi tâm trí tớ                                                                                          |
+| 空いた教室　風揺れるカーテン<br><br>君と空を見上げたあの夏が<br><br>いつまでだって頭上にいた                  | aita kyōshitsu 　 kaze yureru kāten<br><br>kimi to sora o miageta ano natsu ga<br><br>itsu made datte zujō ni ita                                     | In an empty classroom, the curtain was swaying in the wind<br><br>There, I was watching the sky together with you<br><br>That summer will never cease to be on my mind                                     | Lớp học trống không, tấm rèm cửa đung đưa trong gió<br><br>Mùa hè mà tớ cùng cậu ngắm nhìn bầu trời, chưa bao giờ biến mất khỏi tâm trí tớ                                                                                          |
 | さようなら<br><br>青々と息を呑んだ　例う涙は花緑青だ<br><br>黙ったらもう消えんだよ<br><br>馬鹿みたいだよな       | sayōnara<br>  <br>aoao to iki o nond rei u namida wa hana rokushōda<br><br>damattara mō kiendayo<br><br>baka mitaidayona                             | Goodbye<br><br>My youth bruised me and made me gasp; tears are just like emerald-green [[#^1]]<br><br>If I don't say anything, then it will just disappear<br><br>I'm really acting like a fool            | Tạm biệt cậu<br><br>Tớ đã thản nhiên mà nuốt một hơi, nước mắt cũng giống như chất Xanh Paris vậy<br><br>Chỉ cần im lặng thì sẽ tan biến, thật là ngu ngốc quá nhỉ.                                                                 |
 | 思い出せ！                                                                   | Omoidase!                                                                                                                                            | Remember!                                                                                                                                                                                                  | Hãy nhớ ra đi!                                                                                                                                                                                                                      |
 | 思い出せない、と頭が叫んだ<br><br>ならばこの痛みが魂だ<br><br>それでも　それでも聞こえないというなら              | Omoidasenai, to atama ga sakenda<br><br>Naraba kono itami ga tamashīda<br><br>Soredemo sore demo kikoenai to iunara                                  | "I can't remember," I screamed inside my mind<br><br>If that's the case, then this pain itself is my soul<br><br>Even so,<br>Even so, if you insist that you can't hear it…                                | Đầu óc tớ gào thét, nó không thể nhớ ra được<br><br>Nếu thế thì nỗi đau này là linh hồn của tớ<br><br>Dẫu thế, dẫu thế, nếu cậu vẫn không thể nghe thấy tiếng tớ…                                                                   |
